--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@ var route = {
     places.AMS,
     places.DXB,
     places.DXB,
+    places.SIN,
+    places.SIN,
     places.MEL,
     places.MEL,
     places.DXB,
